<resources>
    <string name="app_name">Blood Bank</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="blood_prompt">Choose your blood type</string>
    <string name="phone_number">Phone Number:</string>
    <string name="address">Address:</string>
    <string name="choose_blood">Choose blood type</string>

    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="introduction">If there is need of blood, the donor with the required blood group is identified and notified of the requirement. The project includes algorithm which detects accurate location of the donors, identifies the donors who are available nearby to the location of requester and notifies them. If the identified donors are not available or not willing to donate blood at present then the scope of detection is increased.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="DonorStatus">You are currently a donor, if you wish to change your status please check this box</string>
    <string name="NonDonorStatus">You are not currently a donor, if you wish to change your status please check this box</string>
    <string name="back_update">You did not update your information, press Back if you wish to go back</string>
    <string name="reset_password">Reset Password</string>
    <string name="passwrod_reset_instructions">We just need your registered email to send your password reset instructions</string>
    <string name="password">Password:</string>
    <string name="your_email_address">Your Email Address:</string>
    <string name="be_a_donor">I wish to be a donor</string>
    <string name="register">Register</string>
    <string name="quick_search">Quick Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="quick_search_description">You can choose this option to perform a quick search that will display users within a defined area range</string>
    <string name="advanced_search_criteria">You can choose this option to perform an advanced search meeting your seach criterias</string>
    <string name="enter_max_distance">Enter maximum distance (Km): </string>
    <string name="search">Search</string>
    <string name="search_error_donor">There are no users in need of blood near your area, please change your search criteria</string>
    <string name="search_error_receiver">There are no blood donors near your area, please change your search criteria</string>
    <string name="begin_your_search">Begin your Search</string>
    <string name="proceed_to_next_step">Proceed to next step</string>
    <string name="switch_to_maps_view">Switch to maps view</string>
    <string name="please_wait_while_your_data_gets_loaded">Please wait while your data gets loaded...</string>
    <string name="choose_maximum_distance">Choose maximum distance (Km) : </string>
    <string name="use_current_location">I wish to use my current location</string>
    <string name="send_email">Send Email</string>
    <string name="pref_previously_started">previously_started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
