<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smartSystems.com.bloodBank.Activities.SearchActivity">

    <TextView
        android:id="@+id/textQuickSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_search_description"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnQuickSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_button_bg"
        android:text="@string/quick_search"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textAdvancedSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/advanced_search_criteria"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAdvancedSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_button_bg"
        android:text="@string/advanced_search"
        android:textColor="@color/white" />

</LinearLayout>
