<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context="smartSystems.com.bloodBank.Activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/your_email_address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/User"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/User"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt2"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Password"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtAddress"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/AutoCompleteAddress"
                android:text="@string/phone_number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtPhone"
                android:ems="10"
                android:inputType="text|number" />

            <RadioGroup
                android:id="@+id/Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Phone"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/txtBlood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Gender"
                android:layout_marginTop="20dp"
                android:text="@string/choose_blood"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/BloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/txtBlood"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/txtBlood"
                android:entries="@array/blood_type"
                android:prompt="@string/blood_prompt"></Spinner>

            <CheckBox
                android:id="@+id/Donor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/BloodType"
                android:layout_marginTop="20dp"
                android:text="@string/be_a_donor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/Donor"
                android:layout_marginTop="15dp"
                android:background="@drawable/red_button_bg"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
