<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advanced_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smartSystems.com.bloodBank.Activities.AdvancedSearchActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textChooseDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/choose_maximum_distance"
            android:textColor="@color/dark_gray"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/txtMinDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txtMaxDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:text="100"
                android:textSize="15dp" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/distanceBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:max="100"
            android:progress="100" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/searchBlood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/choose_blood"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/searchBloodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/searchBlood"
                android:layout_alignBottom="@+id/searchBlood"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="23dp"
                android:entries="@array/blood_type"
                android:prompt="@string/blood_prompt"></Spinner>
        </RelativeLayout>

        <Button
            android:id="@+id/btnBeginSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/red_button_bg"
            android:text="@string/search"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
